fixed all dumb spacing issues, now it's at least responsive

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,11 +22,11 @@ body {
 }
 
 header {
-  position: static;
+  /* position: static; */
   background-color: #361e36;
   color: white;
   padding: 20px;
-  z-index: 10;
+  z-index: 20;
   width: 100%;
 }
 
@@ -75,6 +75,10 @@ footer {
 .annoying-thing {
   display: flexbox;
   justify-content: space-between;
+}
+.nav-menu {
+  z-index: 10;
+  position: relative;
 }
 
 .nav-buttons {
@@ -307,7 +311,7 @@ main {
   background-color: #e3e3e3;
   transition: background-color 0.5s ease;
   max-width: 1000px;
-  min-width: 500px;
+  /* min-width: 500px; */
 }
 
 #small-search-input:hover,
